--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,32 @@
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GT9SGNE9P7"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-GT9SGNE9P7');
-    </script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Begin Jekyll SEO tag v2.7.1 -->
+  <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
+  <meta name="generator" content="Jekyll v4.2.0" />
+  <meta property="og:title" content="{{site.title}}" />
+  <meta property="og:locale" content="en_US" />
+  <meta name="description" content="{{site.description}}" />
+  <meta property="og:description" content="{{site.description}}" />
+  <link rel="canonical" href="/" />
+  <meta property="og:url" content="{{site.url}}" />
+  <meta property="og:site_name" content="{{site.title}}" />
+  <meta name="twitter:card" content="{{site.description}}" />
+  <meta property="twitter:title" content="{{site.title}}" />
+  <script type="application/ld+json">
+  {"headline":"Your awesome title","url":"/","@type":"WebSite","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","name":"Your awesome title","@context":"https://schema.org"}</script>
+  <!-- End Jekyll SEO tag -->
+  <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="{{site.title}}" /></head>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GT9SGNE9P7"></script>
+
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-GT9SGNE9P7');
+  </script>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4885726053170676" crossorigin="anonymous"></script>
 </head>
