--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
         </a> -->
         
         <!-- This section manages the navigation bar-->
-        <a href="{{ site.github.url}}/" title="BadUI">Bad UI</a>
+        <a href="{{ site.github.url}}/" title="BadUI">Home</a>
         </div>
         <!--Optionally add the name of the site in the top right -->
         <!-- <div class="forceright">
