--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,4 @@
+{% for page in site.pages %}
 <!DOCTYPE html>
 <html>
     {% include head.html %}
@@ -6,3 +7,4 @@
         {{ content }}
     </body>
 </html>
+{% endfor %}
